<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_from_forgot" android:hint="@string/prompt_email"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_from_forgot" android:hint="@string/prompt_username"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/send_recovery_button"
            style="@style/Base.Widget.AppCompat.Button.Small" android:text="@string/action_recover_password"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/return_from_forgot"
            style="@style/TextAppearance.AppCompat.Small" android:text="@string/action_return_to_login"/>
</LinearLayout>