<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".Activities.NewPasswordActivity" android:id="@+id/LinearNewPassword">

    <!-- Login progress -->

    <ScrollView
            android:id="@+id/new_password_form"
            android:layout_height="match_parent" android:layout_width="match_parent">

        <LinearLayout
                android:id="@+id/newpassword_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:singleLine="true" android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_password_text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promtpt_confirm_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true" android:autoText="true" android:autofillHints=""
                        tools:ignore="Deprecated" android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/send_update_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_update_password"
                    android:textStyle="bold"/>
            <Button
                    android:text="@string/action_return_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/return_from_newpass"
                    style="@android:style/TextAppearance.Small"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>